# thesis-final-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
schemas/: operation-schema.json  static-schema.json
src/pipeline/: __main__.py  config.py  models.py  pipeline.py  stage0_ingest.py  stage1_cv.py  stage2_vlm.py  stage3_mealy.py  stage4_static_ir.py  stage5_operations.py  stage6_validate.py  stage7_tactile.py  stage8_transcript.py
src/tactile_rendering/: pyproject.toml
src/tactile_rendering/fixtures/: v1_simple_flowchart.json
src/tactile_rendering/tactile/: __main__.py  braille.py  ir.py  layout.py  legend.py  pipeline.py  rasterize.py  svg_assembly.py
src/tactile_rendering/tests/: test_braille.py  test_ingest.py  test_ir.py  test_layout.py  test_legend.py  test_rasterize.py  test_svg_assembly.py
src/thesis_final_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_stage3_mealy.py
