[project]
name = "thesis-final-pipeline"
version = "0.1.0"
description = "Pipeline for Making STEM Video Lectures Accessible for VI individuals"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.0",   
    "opencv-python>=4.9",           
    "numpy>=1.26",                  
    "scikit-image>=0.22",           
    "jsonschema>=4.20",             
    "jsonpatch>=1.33",              
    "Pillow>=10.0",                 
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]